--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,5 +37,11 @@ section{
 .top-banner{
     background-image: url(top-banner.png);
     background-repeat: no-repeat;
-    
+
+}
+
+.dream-area{
+    background-image: url("dream-bg.png");
+    background-repeat: no-repeat;
+    background-position : right;
 }
